--- a/SignUpForm/app/src/main/res/values/strings.xml
+++ b/SignUpForm/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Lab3</string>
+    <string name="name_view">Name:</string>
+    <string name="name_hint">John Doe</string>
+    <string name="name_error">Please input name</string>
+    <string name="email_view">Email:</string>
+    <string name="email_hint">abc123@example.com</string>
+    <string name="email_error">Please input email</string>
+    <string name="password_view">Password:</string>
+    <string name="password_hint">Password</string>
+    <string name="password_error">Please input password</string>
+    <string name="confirmation_view">Confirm Password:</string>
+    <string name="confirmation_hint"> </string>
+    <string name="confirmation_error">Password fields must match</string>
 </resources>
